# fgeom

./: .gitignore  LICENSE  README.md  Setup.hs  fgeom.cabal
.HTF/: VectorTests.history
bench/: VectorBenches.hs
src/Geometry/: Math.hs  Space.hs  Structure.hs
src/Geometry/Algebra/: Polynomial.hs
src/Geometry/Math/: Calculus.hs  Optimization.hs  Polynomial.hs  Statistics.hs
src/Geometry/Space/: Approximate.hs  Matrix2x2.hs  Matrix3x3.hs  Matrix4x4.hs  Operations.hs  Quaternion.hs  ScalarOperations.hs  ScalarTensorOperations.hs  SetTensorOperations.hs  StorableHelpers.hs  Tensor.hs  Tensor2.hs  Tensor3.hs  TensorOperations.hs  Transform.hs  Types.hs  Vector2.hs  Vector3.hs  Vector4.hs
src/Geometry/Space/Transform/: MatrixTransform.hs  QuaternionTransform.hs  SpaceTransform.hs  TransformInterop.hs
src/Geometry/Structure/: BoundingBox.hs  EuclidianDistance.hs  Primitives.hs
test/: GeometryTests.hs  MathTests.hs  VectorTests.hs
test/Geometry/Algebra/: PolynomialTest.hs
test/Geometry/Math/: PolynomialTest.hs
test/Geometry/Space/: Matrix2x2Test.hs  Matrix3x3Test.hs  Matrix4x4Test.hs  Vector3Test.hs  Vector4Test.hs  VectorGenerators.hs
test/Geometry/Structure/: EuclidianDistanceTest.hs
test/GeometryTests/: EuclidianDistance.hs
test/MathTests/: Optimization.hs  Polynomial.hs
test/VectorTests/: Matrix2x2.hs  Matrix3x3.hs  Matrix4x4.hs  Vector3.hs  Vector4.hs  VectorGenerators.hs
