name: fgeom
version: 0.2.0
cabal-version: >=1.18
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright (C) 2015 Artem M. Chirkin <chirkin@arch.ethz.ch>
maintainer: Artem M. Chirkin <chirkin@arch.ethz.ch>
stability: Experimental
homepage: http://www.ia.arch.ethz.ch/chirkin/
synopsis: Functional-style geometry in 2D and 3D
description: This experimental package contains geometry types and functions to be used in future together with OpenGL
category: Math, Geometry
author: Artem M. Chirkin <chirkin@arch.ethz.ch>
data-dir: ""

library
    build-depends: HTF >0.9 && <=1, base >=4 && <5
    exposed-modules: Geometry.Space Geometry.Space.Quaternion
                     Geometry.Space.Transform
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules: Geometry.Math.Calculus Geometry.Space.Tensor
                   Geometry.Space.Tensor2 Geometry.Space.Tensor3 Geometry.Space.Types
                   Geometry.Space.ScalarOperations
                   Geometry.Space.ScalarTensorOperations
                   Geometry.Space.TensorOperations Geometry.Space.SetTensorOperations
                   Geometry.Space.Transform.TransformInterop
                   Geometry.Space.Transform.QuaternionTransform
                   Geometry.Space.Transform.MatrixTransform Geometry.Math.Polynomial
                   Geometry.Math.Statistics
    ghc-options: -Wall

--test-suite VectorTests
--    build-depends: HTF >0.9 && <=1, base >=4 && <5
--    type: exitcode-stdio-1.0
--    main-is: VectorTests.hs
--    buildable: True
--    default-language: Haskell2010
--    hs-source-dirs: src test
--    other-modules: Geometry.Space.SetTensorOperations Geometry.Space
--                   Geometry.Space.Transform Geometry.Space.Quaternion
--                   Geometry.Space.Vector3Test Geometry.Space.Matrix4x4Test
--                   Geometry.Space.Matrix3x3Test Geometry.Space.Matrix2x2Test
--                   Geometry.Space.Vector4Test Geometry.Space.VectorGenerators
--                   Geometry.Math.Polynomial Geometry.Math.PolynomialTest
--    ghc-options: -Wall -rtsopts

