name: fgeom
version: 0.2.2
cabal-version: >=1.18
build-type: Custom
license: BSD3
license-file: LICENSE
copyright: Copyright (C) 2015 Artem M. Chirkin <chirkin@arch.ethz.ch>
maintainer: Artem M. Chirkin <chirkin@arch.ethz.ch>
stability: Experimental
homepage: http://www.ia.arch.ethz.ch/chirkin/
synopsis: Functional-style geometry in 2D and 3D
description:
    This experimental package contains geometry types and functions
category: Math, Geometry
author: Artem M. Chirkin <chirkin@arch.ethz.ch>

library
    exposed-modules:
        Geometry.Math
        Geometry.Space
        Geometry.Space.Quaternion
        Geometry.Space.Transform
        Geometry.Structure
    build-depends:
        base >=4 && <5
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Geometry.Space.Approximate
        Geometry.Space.Tensor
        Geometry.Space.Types
        Geometry.Space.Transform.SpaceTransform
        Geometry.Space.Transform.QuaternionTransform
        Geometry.Space.Transform.MatrixTransform
        Geometry.Math.Calculus
        Geometry.Math.Optimization
        Geometry.Math.Polynomial
        Geometry.Math.Statistics
        Geometry.Structure.BoundingBox
        Geometry.Structure.EuclidianDistance
        Geometry.Structure.Primitives
    ghc-options: -Wall

test-suite VectorTests
    type: exitcode-stdio-1.0
    main-is: VectorTests.hs
    build-depends:
        HTF >0.9 && <=1,
        base >=4 && <5
    default-language: Haskell2010
    hs-source-dirs: src test
    other-modules:
        VectorTests.Vector3
        VectorTests.Matrix4x4
        VectorTests.Matrix3x3
        VectorTests.Matrix2x2
        VectorTests.Vector4
        VectorTests.VectorGenerators
    ghc-options: -Wall -rtsopts
test-suite GeometryTests
    type: exitcode-stdio-1.0
    main-is: GeometryTests.hs
    build-depends:
        HTF >0.9 && <=1,
        base >=4 && <5
    default-language: Haskell2010
    hs-source-dirs: src test
    other-modules:
        VectorTests.VectorGenerators
        GeometryTests.EuclidianDistance
    ghc-options: -Wall -rtsopts
test-suite MathTests
    type: exitcode-stdio-1.0
    main-is: MathTests.hs
    build-depends:
        HTF >0.9 && <=1,
        base >=4 && <5
    default-language: Haskell2010
    hs-source-dirs: src test
    other-modules:
        MathTests.Optimization
        MathTests.Polynomial
    ghc-options: -Wall -rtsopts

benchmark VectorBenches
    type: exitcode-stdio-1.0
    main-is: VectorBenches.hs
    build-depends:
        base >=4 && <5,
        criterion >=1 && <1.2
    default-language: Haskell2010
    hs-source-dirs: src bench
    ghc-options: -Wall -O2 -threaded -fprof-auto "-with-rtsopts=-N -p -s -h -i0.1"
